[metadata]
name = pypropgraph
version = 0.5.0
author = Alex Miłowski
author_email = alex@milowski.com
description = A property graphs library for importing and generating cypher in python
license = MIT License
url = https://github.com/alexmilowski/pypropgraph
keywords=
   cypher
   property
   graph

[options]
packages =
   propgraph
include_package_data = True
install_requires =
	pyyaml
	lark-parser
	redis
	redisgraph

[options.package_data]
* = *.json, *.yaml, *.flow

